--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack --progress",
     "build:prod": "webpack -p --progress",
     "typings-install": "typings install",
-    "start": "webpack-dev-server -inline --progress"
+    "start": "webpack-dev-server -inline --progress",
+    "build-tests": "tsc --rootDir /tests --outDir dist-tests",
+    "tsc": "tsc"
   },
   "keywords": [
     "Github",
@@ -17,15 +19,18 @@
     "Angular-2"
   ],
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "^0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
     "@ngrx/core": "^1.0.1",
     "@ngrx/store": "^2.0.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-loader": "^1.2.0-beta.1",
     "core-js": "^2.2.0",
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.8",
@@ -35,11 +40,13 @@
   "author": "Tawhid Hannan",
   "license": "ISC",
   "devDependencies": {
+    "@angular/testing": "0.0.0-0",
     "html-webpack-plugin": "^2.22.0",
-    "ts-loader": "@0.8.2",
-    "typescript": "@1.8.10",
-    "typings": "@1.3.2",
-    "webpack": "@1.13.1",
+    "jasmine-core": "2.4.1",
+    "ts-loader": "0.8.2",
+    "typescript": "1.8.10",
+    "typings": "1.3.2",
+    "webpack": "1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
