--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap-loader": "^1.2.0-beta.1",
     "core-js": "^2.2.0",
     "ie-shim": "^0.1.0",
+    "ngrx-store-logger": "^0.1.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12"
