--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ngrx-store-logger": "^0.1.7",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.6",
+    "underscore": "^1.8.3",
     "zone.js": "~0.6.12"
   },
   "author": "Tawhid Hannan",
