--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
     "@ngrx/core": "^1.0.1",
+    "@ngrx/effects": "^2.0.0-beta.2",
     "@ngrx/store": "^2.0.1",
     "bootstrap": "^3.3.7",
     "bootstrap-loader": "^1.2.0-beta.1",
@@ -43,8 +44,10 @@
   "license": "ISC",
   "devDependencies": {
     "@angular/testing": "0.0.0-0",
+    "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.22.0",
     "jasmine-core": "2.4.1",
+    "style-loader": "^0.13.1",
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
     "typings": "1.3.2",
