--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   "license": "ISC",
   "devDependencies": {
     "@angular/testing": "0.0.0-0",
+    "angular2-template-loader": "^0.4.0",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.22.0",
     "jasmine-core": "2.4.1",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "ts-loader": "0.8.2",
     "typescript": "1.8.10",
